--- a/index.html
+++ b/index.html
@@ -989,6 +989,9 @@
   <!-- ////////////////////////// -->
   <!-- ////////////////////////// -->
   <!-- ////////////////////////// -->
+  <!-- PageVisits.js -->
+<script src="https://team.biblefarm.org/_js/PageVisits.js" type="text/javascript"></script>
+
 
   <!-- Go to www.addthis.com/dashboard to customize your tools
   <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-53f4628f4f316c50"></script>
